src/objects/zqu__Quote__c.object
<CustomObject>
    <description>The Quotes related to an Opportunity.</description>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>ROUND((zqu__MRR__c * 12),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Reason__c</fullName>
        <label>Why It Needs Approval</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status_Display__c</fullName>
        <formula>IF( Approval_Was_Not_Required__c, &quot;Approval Was Not Required&quot;,
CASE( TEXT( Approval_Status__c ),
    &quot;Approved&quot;, &quot;Approved&quot;,
    IF(Requires_Cancellation_Approval__c || Requires_BPM_Approval__c || Requires_Consulting_Approval__c || Requires_DBD_Approval__c,
        CASE( TEXT( Approval_Status__c ) , 
              &quot;Not Submitted&quot;, &quot;Needs Approval, Not Submitted Yet&quot;, 
              &quot;Pending&quot;, &quot;Pending Approval&quot;,
              TEXT( Approval_Status__c ) ) 
        , &quot;Approval Not Required&quot; ) ) )</formula>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>AppStage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Was_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Was Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPM_Region__c</fullName>
        <formula>Billing_Account__r.BPM_Region2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPM Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>Billing_Account__r.Zuora__AccountNumber__c</formula>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Build_Original_Charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Build Original Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_Custom_Report__c</fullName>
        <label>CCR Custom Report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCR_Expenses__c</fullName>
        <label>CCR Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMS_Balance_Due__c</fullName>
        <label>CMS Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMS_Expenses__c</fullName>
        <label>CMS Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMS_Retainer__c</fullName>
        <label>CMS Retainer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculate_TDP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate TDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delta_ARR__c</fullName>
        <formula>Round((zqu__Previewed_Delta_MRR__c * 12),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delta_QRR__c</fullName>
        <formula>zqu__Previewed_Delta_MRR__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta QRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EchoSign_Agreement_Message__c</fullName>
        <description>Default subject line in the Echo sign email</description>
        <formula>&quot;Metrostudy client agreement&quot;</formula>
        <label>EchoSign Agreement Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_BPM_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has BPM Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Consulting_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Consulting Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Final_Consulting_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Final Consulting Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Metrostudy_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Metrostudy Membership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Non_Consulting_Charge_Needs_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Non-Consulting Charge Needs Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Quote_Discount__c</fullName>
        <formula>Quote_Discount_Percentage__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Quote Discount?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Reimbursable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Reimbursable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Residential_Economic_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Residential Economic Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Retainer_Rate_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Retainer Rate Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Strategic_Positioning_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Strategic Positioning Model?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acctg Assistance Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <formula>CASESAFEID(zqu__Opportunity__r.Id)</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>zqu__Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <formula>&quot;https://na29.salesforce.com/&quot;+ &quot;&quot; +zqu__Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <formula>zqu__Opportunity__r.Owner.FirstName + &quot; &quot; + zqu__Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>zqu__Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Type__c</fullName>
        <formula>Text(zqu__Opportunity__r.One_time_Sale_Type__c)</formula>
        <label>Opportunity Sales Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(zqu__Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Record_Type_Name__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <label>Original Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QRR__c</fullName>
        <formula>zqu__MRR__c * 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_ARR__c</fullName>
        <formula>IF(ISPICKVAL(zqu__Subscription_Term_Type__c, &apos;Termed&apos;) &amp;&amp;  zqu__InitialTerm__c &lt; 12, 
  NULL,
  CASE(Original_Record_Type_Name__c, 
    &apos;Default&apos;, ARR__c, 
    Delta_ARR__c))</formula>
        <label>Quote ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Charges__c</fullName>
        <label>Quote Charges</label>
        <summarizedField>zqu__QuoteCharge__c.zqu__Total__c</summarizedField>
        <summaryForeignKey>zqu__QuoteCharge__c.zqu__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quote_Discount_Percentage__c</fullName>
        <formula>IF(Total_List_Price__c != 0, (Total_List_Price__c - Total_Quote_Value__c) / Total_List_Price__c, 0) /* +
IF(Total_List_Price__c != 0 &amp;&amp; Original_Record_Type_Name__c = &quot;Amendment&quot;, -1, 0) */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quote_MRR__c</fullName>
        <formula>CASE(Original_Record_Type_Name__c,
&apos;Default&apos;, zqu__Previewed_MRR__c,
zqu__Previewed_Delta_MRR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_QRR__c</fullName>
        <formula>IF(ISPICKVAL(zqu__Subscription_Term_Type__c, &apos;Termed&apos;) &amp;&amp; zqu__InitialTerm__c &lt; 12, 
  NULL,
  CASE(Original_Record_Type_Name__c, 
    &apos;Default&apos;, QRR__c, 
    Delta_QRR__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote QRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_SFDC_ID__c</fullName>
        <label>Quote SFDC ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(zqu__Opportunity__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_BPM_Approval__c</fullName>
        <formula>TEXT(zqu__Opportunity__r.Channel_Type__c) == &quot;BPM&quot; &amp;&amp; Quote_Discount_Percentage__c &gt; 0</formula>
        <label>Requires BPM Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Cancellation_Approval__c</fullName>
        <formula>Original_Record_Type_Name__c == &apos;Cancellation&apos; || Total_Quote_Value__c &lt;=  $Setup.FC_Approval_Threshold_Settings__c.Cancellation_Approval_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Cancellation Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Consulting_Approval__c</fullName>
        <formula>zqu__Opportunity__r.RecordType.DeveloperName == &apos;Metrostudy_Opportunity_Record_Type_Consult&apos; 
&amp;&amp; !zqu__Opportunity__r.Has_Approved_Quote__c &amp;&amp; zqu__Opportunity__r.Amount &lt; $Setup.FC_Approval_Threshold_Settings__c.Consulting_Quote_Total_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Consulting Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_DBD_Approval__c</fullName>
        <formula>!$Setup.FC_Approval_Settings__c.Bypass_DBD_Approval__c &amp;&amp; zqu__Opportunity__r.RecordType.DeveloperName != &apos;Metrostudy_Opportunity_Record_Type_Consult&apos; &amp;&amp; !Requires_Consulting_Approval__c &amp;&amp; (
     (Total_Discount_Percentage__c &gt; $Setup.FC_Approval_Threshold_Settings__c.Quote_Discount_Percentage__c &amp;&amp; Total_Discount_Percentage__c &lt;= 100) || 
     (Total_Quote_Value__c  &gt; 0 &amp;&amp; Total_Quote_Value__c  &lt; $Setup.FC_Approval_Threshold_Settings__c.Non_Consulting_Quote_Total_Amount__c) ||
     (Has_Metrostudy_Membership__c &amp;&amp; (!Has_Residential_Economic_Report__c || !Has_Strategic_Positioning_Model__c))
) &amp;&amp; Quote_Discount_Percentage__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires DBD Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Product_Delivery_Date__c</fullName>
        <formula>zqu__Opportunity__r.Scheduled_Delivery_Date__c</formula>
        <label>Scheduled Product Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_To_Z_Billing_On__c</fullName>
        <label>Sent To Z-Billing On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sub_ARR__c</fullName>
        <formula>/* Sum_of_Charge_Totals__c */
IF(ISPICKVAL(zqu__Subscription_Term_Type__c, &apos;Termed&apos;) &amp;&amp; zqu__InitialTerm__c &lt; 12, 
NULL, 
Sum_of_Charge_Totals__c - Sum_of_One_Time_Charge_Totals__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_QRR__c</fullName>
        <formula>Sub_ARR__c / 4</formula>
        <label>Subscription QRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval_By_Email__c</fullName>
        <label>Submitted for Approval By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sum_Annualized_Charge_List_Totals_Delta__c</fullName>
        <label>Sum Annualized Charge List Totals Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Annualized_Charge_Totals_Delta__c</fullName>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Annualized_Charge_Totals__c</fullName>
        <label>Quote Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Annualized_Original_Charge_Totals__c</fullName>
        <label>Original Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Charge_List_Totals__c</fullName>
        <label>Total Subscription List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Charge_Totals_Sans_Expenses__c</fullName>
        <formula>Sum_of_Charge_Totals__c - CCR_Expenses__c - CMS_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expenses are excluded from this value.</inlineHelpText>
        <label>Total Subscription Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Charge_Totals__c</fullName>
        <label>Total Subscription Value (w/ Expenses)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_One_Time_Charge_Totals__c</fullName>
        <label>Sum of One-Time Charge Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Original_One_Time_Charge_Totals__c</fullName>
        <label>Sum of Original One Time Charge Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Termed_Charge_List_Totals_Delta__c</fullName>
        <label>Sum of Termed Charge List Totals Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Termed_Charge_Totals_Delta__c</fullName>
        <label>Sum of Termed Charge Totals Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Termed_Charge_Totals__c</fullName>
        <label>Sum of Termed Charge Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_Termed_Original_Charge_Totals__c</fullName>
        <label>Sum of Termed Original Charge Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Subscription Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>IF(ISPICKVAL(zqu__Subscription_Term_Type__c, &quot;evergreen&quot;), Sum_Annualized_Charge_List_Totals_Delta__c, Sum_of_Termed_Charge_List_Totals_Delta__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Value__c</fullName>
        <formula>IF(ISPICKVAL(zqu__Subscription_Term_Type__c, &quot;Evergreen&quot;) || (ISPICKVAL(zqu__Subscription_Term_Type__c, &quot;Termed&quot;) &amp;&amp; Original_Record_Type_Name__c == &quot;Cancellation&quot;), 
  Sum_of_Annualized_Charge_Totals_Delta__c, 
  Sum_of_Termed_Charge_Totals_Delta__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account associated with this Quote.</description>
        <inlineHelpText>The Account associated with this Quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__AmendmentName__c</fullName>
        <description>A name for the amendment.</description>
        <label>Amendment Name (Deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Amendment_Name__c</fullName>
        <description>New amendment name field to accommodate Opportunity Name</description>
        <label>Amendment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ApplyCreditBalance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag determines whether any credit balance on a customer&apos;s account is automatically applied to invoices</description>
        <inlineHelpText>The flag determines whether any credit balance on a customer&apos;s account is automatically applied to invoices</inlineHelpText>
        <label>Apply Credit Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__ApprovalStatus__c</fullName>
        <description>Current Approval Status of the Quote</description>
        <inlineHelpText>Used to track the approval status of the quote.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready For Approval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__AutoRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Quote will Auto Renew or not.</description>
        <inlineHelpText>If this Quote will Auto Renew or not.</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__BillCycleDay__c</fullName>
        <label>Bill Cycle Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is billed for this Quote.</description>
        <inlineHelpText>The Contact that is billed for this Quote.</inlineHelpText>
        <label>Bill to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__BillingBatch__c</fullName>
        <label>Billing Batch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Batch1</fullName>
                    <default>true</default>
                    <label>Batch1</label>
                </value>
                <value>
                    <fullName>Batch2</fullName>
                </value>
                <value>
                    <fullName>Batch3</fullName>
                </value>
                <value>
                    <fullName>Batch4</fullName>
                </value>
                <value>
                    <fullName>Batch5</fullName>
                </value>
                <value>
                    <fullName>Batch6</fullName>
                </value>
                <value>
                    <fullName>Batch7</fullName>
                </value>
                <value>
                    <fullName>Batch8</fullName>
                </value>
                <value>
                    <fullName>Batch9</fullName>
                </value>
                <value>
                    <fullName>Batch10</fullName>
                </value>
                <value>
                    <fullName>Batch11</fullName>
                </value>
                <value>
                    <fullName>Batch12</fullName>
                </value>
                <value>
                    <fullName>Batch13</fullName>
                </value>
                <value>
                    <fullName>Batch14</fullName>
                </value>
                <value>
                    <fullName>Batch15</fullName>
                </value>
                <value>
                    <fullName>Batch16</fullName>
                </value>
                <value>
                    <fullName>Batch17</fullName>
                </value>
                <value>
                    <fullName>Batch18</fullName>
                </value>
                <value>
                    <fullName>Batch19</fullName>
                </value>
                <value>
                    <fullName>Batch20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__BillingCycleDay__c</fullName>
        <description>(Deprecated)</description>
        <formula>TEXT(DAY( zqu__StartDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>(Deprecated)BillingCycleDay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__BillingEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Entity</label>
        <referenceTo>zqu__BillingEntity__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__BillingMethod__c</fullName>
        <description>The Billing Method of the Quote.</description>
        <inlineHelpText>The Billing Method of the Quote.</inlineHelpText>
        <label>Invoice Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Calculate_Quote_Metrics_Through__c</fullName>
        <description>Select how you would like Quote Metrics values to be calculated</description>
        <inlineHelpText>Select how you would like Quote Metrics values to be calculated.If you select the End of Term option, Evergreen Subscription metrics will be calculated for 1 billing period.</inlineHelpText>
        <label>Calculate Quote Metrics Through</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationDate__c</fullName>
        <description>Date on which the cancellation is made.</description>
        <inlineHelpText>Date on which the cancellation is made.</inlineHelpText>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__CancellationEffectiveDate__c</fullName>
        <label>Cancellation Effective Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter a Date</fullName>
                    <default>true</default>
                    <label>Enter a Date</label>
                </value>
                <value>
                    <fullName>End of Current Term</fullName>
                </value>
                <value>
                    <fullName>End of Last Invoice Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Certificate_ID__c</fullName>
        <label>Certificate ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Certificate_Type__c</fullName>
        <label>Certificate Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__CommunicationProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication Profile</label>
        <referenceTo>zqu__CommunicationProfile__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Company_Code__c</fullName>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Currency__c</fullName>
        <description>The Currency the Quote is in.</description>
        <inlineHelpText>The Currency the Quote is in.</inlineHelpText>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Customer_Acceptance_Date__c</fullName>
        <inlineHelpText>Customer Acceptance Date should be on or after Service Activation Date.
If Customer Acceptance Date is not required in Zuora, the Service Activation Date will be used as the Customer Acceptance Date.</inlineHelpText>
        <label>Customer Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountMRR__c</fullName>
        <description>The Contracted Delta Discount MRR value returned from previewing the Quote in Zuora</description>
        <inlineHelpText>The Contracted Delta Discount MRR value returned from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaDiscountTCBTax__c</fullName>
        <description>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</description>
        <inlineHelpText>Tax on Delta Discount TCB retrieved from previewing the Quote in Zuora</inlineHelpText>
        <label>Delta Discount TCB Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>